3-technical-documentation-page/styles.css
/* Your Technical Documentation project should use at least one media query.  */
@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
                
:root {
	--background-color: #fdd0bb;
	--nav-background-color: #ffa47a;
	--nav-link-color: rgb(77, 78, 83);
	--link-background-color: #ee763e;
	--font-color: #1a1b16;
}

body {
	font-family: 'Helvetica Neue', H, serif;
	font-size: 16px;
	background-color: var(--background-color);
	color: var(--font-color);

	::selection {
		background-color: var(--link-background-color);
	}
	
	
}

main {
	padding: 20px;
}

p, li {
	font-weight: 300;
	letter-spacing: 0.5px;
}
ul li::marker {
	font-size: 0.8rem;
}

.nav-wrapper {
	background-color: var(--nav-background-color);
}

#navbar {
	
	header {
		font-size: 1.875rem;
		margin: 0 10px 10px;
	}
	
	.nav-link-wrapper {
		box-sizing: content-box;
		border: 1px solid var(--font-color);
		margin: 5px;
	}
	
	.nav-link {
		display: block;
		padding: 10px 30px;
		color: var(--nav-link-color);
	}
	.nav-link:link,
	.nav-link:visited {
		text-decoration: none;
	}
	.nav-link:hover,
	.nav-link:active {
		background-color: var(--link-background-color);
		text-decoration: underline;
	}
	
	padding-bottom: 2px;
	border-bottom: 2px solid var(--font-color);
}

.main-section {
	header {
		font-size: 1.5rem;
		font-style: italic;
	}
	
	article {
		padding: 0 20px;
	}
}

code {
	tab-size: 4;
	overflow-x: scroll;
}

/* UTILITY CLASSES */
.bold {
	font-weight: 700;
	font-weight: 900;
}
.inline-block {
	display: inline-block;
}

@media (min-width: 768px) {
	body {
		display: grid;
		grid-template-columns: 210px auto;
		grid-template-rows: none;
	}
	
	.nav-wrapper {
		min-height: 100vh;
		min-width: 210px;
		position: relative;
	}
	
	#navbar {
		position: fixed;
		border-bottom: none;
		max-width: 210px;
		margin-top: 0.8rem;
		
		.nav-link-wrapper {
			margin-top: 1rem;
			padding-top: 0.5rem;
			padding-bottom: 0.5rem;
		}
	}
	
	#main-doc section header {
		margin-left: -1rem;
	}
}

